k8s/applications/public/homepage/base/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
