k8s/applications/public/homepage/base/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-homepage
  namespace: homepage
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: homepage}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # Envoy Gateway
  # egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-syncjob
  namespace: homepage
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: karlsenfr-sync}}
  # ingress: []
  egress:
    - {toFQDNs: [{matchName: github.com}, {matchName: objects.githubusercontent.com}, {matchName: codeload.github.com}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
